//standard data types: bool, int32, int64, float, double, and string.
syntax = "proto3";

option java_package = "com.adtiming.om.pb";
option java_outer_classname = "StatPB";

// For Placement FloorPrice fix
// 取 Placement eCPM, Country+Placement, imp>2000, 最近7天
message PlacementEcpm {
    int32 placement_id = 1;
    string country = 2;
    float ecpm = 3;
}

// For Placement FloorPrice fix
// 取全局Country+AdType 平均eCPM
message CountryAdTypeEcpm {
    string country = 1;
    int32 ad_type = 2;
    float ecpm = 3;
}

// For Auto Waterfall 数据
message AdNetworkEcpm {
    int32 adn_id = 1;
    float ecpm = 2;
}

// For Auto Waterfall 数据
message AdNetworkCountryEcpm {
    int32 adn_id = 1;
    string country = 2;
    float ecpm = 3;
}

// For Auto Waterfall 数据
message AdNetworkAdTypeCountryEcpm {
    int32 mediation_id = 1;
    int32 placement_type = 2;
    string country = 3;
    float ecpm = 4;
}

message InstanceCountryEcpm {
    int32 instance_id = 1;
    string country = 2;
    float ecpm = 3;
}

message PlacementCountryEcpm {
    int32 placement_id = 1;
    string country = 2;
    float ecpm = 3;
}

//For Auto Waterfall ExponentialSmoothing instance+country+7day
message InstanceCountryDayEcpm {
    string day = 1;
    int32 instance_id = 2;
    string country = 3;
    int32 impr = 4;
    float cost = 5;
}

//For Auto Waterfall ExponentialSmoothing adn+country+近3天
message AdnCountryAdTypeEcpm {
    int32 adn_id = 1;
    int32 ad_type = 2;
    string country = 3;
    float ecpm = 4;
}

message CountryEcpm {
    string country = 1;
    float ecpm = 2;
}

message AdnAdTypeEcpm {
    int32 adn_id = 1;
    int32 ad_type = 2;
    float ecpm = 3;
}

message AdTypeEcpm {
    int32 ad_type = 1;
    float ecpm = 2;
}

message AdnEcpm {
    int32 adn_id = 1;
    float ecpm = 2;
}
